# retirement_simulator

./: .gitignore  .prettierrc  ConfigMonteCarlo.py  README.md  Roth_Conversion_Window.md  config_context.md  config_context.py  cspell.json  folder_structure.txt  generate_init_files.py  pyproject.toml  retirement_simulator.code-workspace  retirement_simulator.py  sim_withdrawal.md  sim_withdrawal.py  spending_sources.xlsx  wbi.py  withdrawal_summary.xlsx
core/adjustments/: adjustments.py
core/tax/: tax_constants.py
data/: in_account.xlsx  in_config.xlsx  in_tax_table.xlsx
data/import/: tax_table.xlsx
dev/: debug_util.py  lint_suggestions.py
doc/: CONTRIBUTORS.md  IBM.md  Schema Naming Convention.md  Temp - AI Parking Lot.txt  config.md  context.md  ledger.md  sim_montecarlo.md  technical_crib_sheet.md
doc/methodology/: ai_context_initial.md  project_state_initial.md
docs/: Parking Lot Concepts.txt  README.md  ai_methodology.md  retirement_blueprint.md  runner.md  wbi.md
docs/ClaudeAI_methodology/: ai_collab_methodology.md
inputs/ui_snapshot/: tax_loader.py  wbi.py  wbi_schema.py
methodology/: project-setup.md
simulation/: config.py  context.py  data_pipeline.py  schedule.py
src/: __init__.py
src/config/: catalog.py  config.py  config_loader.py  config_schema.py
src/context/: context.py
src/core/: rmd_util.py  schedule.py  schema_constants.py  schema_frame.py  schema_util.py  spending_util.py  strategy_catalog.py  tax_engine.py
src/io/: excel_loader.py  export_util.py  portfolio_loader.py  tax_loader.py
src/io_input/: excel_loader.py  (+4 more)
(+74 files in other folders)
